[tool.poetry]
name = "tallerexpresspython"
version = "0.1.0"
description = "Taller básico para aprender Python."
authors = ["gmagannaDevelop <gmaganna.biomed@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pweave = "^0.30.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
